[package]
name = "linnstrument-mpe-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmididings = { git = "https://github.com/necrobious/rmididings", branch = "mpe_fix", features = ['alsa'] }
structopt  = { version = "0.3" }
